# drone_ros2_advanced

./: .gitignore  LICENSE  README.md
drone_ros2_advanced/: package.xml  setup.cfg  setup.py
drone_ros2_advanced/config/: waypoints.yaml
drone_ros2_advanced/drone_ros2_advanced/: aruco_detector.py  drone_controller.py  keyboard_control.py  keyboard_control_ab.py  keyboard_control_v2.py  precision_land_ab.py  px4_base.py
drone_ros2_advanced/drone_ros2_advanced/week01/: takeoff_single_base.py  takeoff_single_raw.py
drone_ros2_advanced/drone_ros2_advanced/week02/: multi_position_base.py  multi_position_raw.py
drone_ros2_advanced/drone_ros2_advanced/week03/: waypoint_yaml_base.py  waypoint_yaml_raw.py
drone_ros2_advanced/drone_ros2_advanced/week04/: waypoint_mission_base.py  waypoint_mission_raw.py
drone_ros2_advanced/drone_ros2_advanced/week05/: folium_map_demo.py  gps_ned_viewer.py
drone_ros2_advanced/drone_ros2_advanced/week06/: goto_gps_base.py  goto_gps_raw.py  map_click_server.py
drone_ros2_advanced/drone_ros2_advanced/week08/: camera_viewer.py  contour_demo.py
drone_ros2_advanced/drone_ros2_advanced/week09/: center_error_viewer.py
drone_ros2_advanced/drone_ros2_advanced/week10/: face_detector.py  face_to_command.py
drone_ros2_advanced/drone_ros2_advanced/week11/: p_control_demo.py
drone_ros2_advanced/drone_ros2_advanced/week12/: face_following_base.py  face_following_raw.py
drone_ros2_advanced/drone_ros2_advanced/week13/: face_following_stable_base.py  face_following_stable_raw.py
(+2 files in other folders)
